--- a/README
+++ b/README
@@ -8,4 +8,4 @@ a MVC in wxPython.
 Are welcome to any type of aid-help.
 
 NOTE:
-    - Exclude from commit wxPyFw.log
+    - Exclude from commit ./wxPyFw.log
